[package]
name = "rsdb"
version = "0.1.0"
authors = ["huBIerTi2 <hubi.wasilewski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sexplib = { git = "https://github.com/kyepskee/sexplib" }
sexplib = { path = "../sexplib" }
expr = { path = "../sexplib/expr" }
